--- a/package.json
+++ b/package.json
@@ -229,7 +229,7 @@
     "typescript": "5.2.2",
     "vitest": "0.34.6",
     "web-ext": "7.6.2",
-    "webpack": "5.79.0",
+    "webpack": "5.94.0",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.1.4",
     "webpack-extension-reloader": "rainbow-me/webpack-extension-reloader#23fc3ed1f59f295702d459ad58aec90d6f0a3551",
@@ -276,7 +276,8 @@
     "phin": "3.7.1",
     "braces": "3.0.3",
     "ws": "8.17.1",
-    "micromatch": "4.0.8"
+    "micromatch": "4.0.8",
+    "webpack": "5.94.0"
   },
   "lavamoat": {
     "allowScripts": {
