--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -14,6 +14,7 @@
     "GHSA-j8xg-fqg3-53r7",
     "GHSA-67hx-6x53-jw92",
     "GHSA-c24v-8rfc-w8vw",
-    "GHSA-mgfv-m47x-4wqp"
+    "GHSA-mgfv-m47x-4wqp",
+    "GHSA-96g7-g7g9-jxw8"
   ]
 }
